# gitnit

./: .gitignore  README.md  gitnit.example.toml  pyproject.toml
src/gitnit/: __init__.py  __main__.py  ai_reviewer.py  app.py  cache.py  cli.py  config.py  github_client.py  models.py
src/gitnit/screens/: issue_detail.py  issue_list.py  pr_detail.py  pr_diff.py  pr_list.py
src/gitnit/styles/: app.tcss
src/gitnit/widgets/: copyable_text.py
src/reviewsage/: __init__.py  __main__.py  ai_reviewer.py  app.py  cache.py  github_client.py  models.py  sorting.py
src/reviewsage/screens/: issue_detail.py  issue_list.py  pr_detail.py  pr_list.py
src/reviewsage/styles/: app.tcss
src/reviewsage/widgets/: copyable_text.py  paginated_table.py
