[project]
name = "gitnit"
version = "0.1.0"
description = "AI-powered TUI for reviewing GitHub pull requests and issues"
requires-python = ">=3.12"
dependencies = [
    "textual>=3.0.0",
    "pygithub>=2.5.0",
    "claude-agent-sdk>=0.1.0",
    "click>=8.1.0",
    "google-genai>=1.0.0",
    "rich>=13.0.0",
]

[project.scripts]
gitnit = "gitnit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gitnit"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/gitnit/ai_reviewer.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
